--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "cd .. && husky NextJS/.husky"
   },
   "dependencies": {
     "next": "15.0.2",
